--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -25,3 +25,5 @@ rules:
     '@typescript-eslint/no-unused-vars': off
     '@typescript-eslint/no-explicit-any': off
     '@typescript-eslint/ban-ts-comment': off
+ignorePatterns:
+    - dist
