--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -26,4 +26,5 @@ rules:
     '@typescript-eslint/no-explicit-any': off
     '@typescript-eslint/ban-ts-comment': off
 ignorePatterns:
-    - dist
+    - /dist/
+    - /node_modules/
