fix: get `scheme`

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -26,5 +26,4 @@ rules:
     '@typescript-eslint/no-explicit-any': off
     '@typescript-eslint/ban-ts-comment': off
 ignorePatterns:
-    - /dist/
-    - /node_modules/
+    - dist
