--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "scripts": {
         "build:cjs": "esbuild src/index.ts --outfile=dist/index.js --bundle --format=cjs",
         "build:esm": "tsc",
-        "dev:cjs": "npm run build:cjs -- --watch",
-        "dev:esm": "npm run build:esm -- --watch",
+        "dev:prepare": "cd src && npm i",
+        "dev:cjs": "npm run dev:prepare && npm run build:cjs -- --watch",
+        "dev:esm": "npm run dev:prepare && npm run build:esm -- --watch",
         "prod": "rm -rf dist && npm run build:cjs -- --minify --sourcemap && npm run build:esm",
         "test": "jest",
         "lint": "eslint ./src"
