--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "A Virtual CSS language with enhanced syntax. ( ~13KB )",
     "author": "Aoyue Design LLC.",
     "main": "index.js",
+    "type": "module",
     "module": "esm/index.js",
     "types": "esm/index.d.ts",
     "exports": {
