--- a/package.json
+++ b/package.json
@@ -3,27 +3,16 @@
     "license": "MIT",
     "description": "An open-source project template",
     "author": "Aoyue Design LLC.",
-    "main": "index.js",
-    "module": "esm/index.js",
-    "types": "esm/index.d.ts",
-    "exports": {
-        ".": {
-            "require": "./index.cjs.js",
-            "import": "./esm/index.js",
-            "types": "./esm/index.d.ts"
-        }
-    },
-    "sideEffects": false,
     "funding": "https://docs.master.co/package/donate",
     "homepage": "https://master.co",
-    "private": false,
-    "keywords": [
-        "package"
-    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/master-co/package.git"
     },
+    "keywords": [
+        "package"
+    ],
+    "sideEffects": false,
     "scripts": {
         "build:iife": "esbuild src/index.ts --bundle --outfile=dist/index.js --format=iife",
         "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs.js --format=cjs",
@@ -34,6 +23,96 @@
         "prod": "rm -rf dist && npm run build:cjs -- --minify --sourcemap && npm run build:iife -- --minify --sourcemap && npm run build:esm",
         "test": "jest",
         "lint": "eslint ./src"
+    },
+    "main": "index.js",
+    "type": "module",
+    "module": "esm/index.js",
+    "types": "esm/index.d.ts",
+    "exports": {
+        ".": {
+            "require": "./index.cjs.js",
+            "import": "./esm/index.js",
+            "types": "./esm/index.d.ts"
+        }
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "transform": {
+            "^.+\\.(t|j)sx?$": "@swc/jest"
+        },
+        "testMatch": [
+            "<rootDir>/tests/*.ts",
+            "<rootDir>/src/**/*.test.ts"
+        ]
+    },
+    "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
+    "engines": {
+        "node": ">=17.1"
+    },
+    "release": {
+        "plugins": [
+            [
+                "@semantic-release/commit-analyzer",
+                {
+                    "preset": "angular",
+                    "releaseRules": [
+                        {
+                            "type": "docs",
+                            "scope": "README",
+                            "release": "patch"
+                        },
+                        {
+                            "type": "refactor",
+                            "release": "patch"
+                        },
+                        {
+                            "type": "style",
+                            "release": "patch"
+                        }
+                    ],
+                    "parserOpts": {
+                        "noteKeywords": [
+                            "BREAKING CHANGE",
+                            "BREAKING CHANGES"
+                        ]
+                    }
+                }
+            ],
+            "@semantic-release/release-notes-generator",
+            [
+                "@semantic-release/exec",
+                {
+                    "prepareCmd": "npm run prod && cp README.md LICENSE package.json dist"
+                }
+            ],
+            [
+                "@semantic-release/github"
+            ],
+            [
+                "@semantic-release/npm",
+                {
+                    "pkgRoot": "dist"
+                }
+            ]
+        ],
+        "branches": [
+            "+([0-9])?(.{+([0-9]),x}).x",
+            "main",
+            "next",
+            "next-major",
+            {
+                "name": "beta",
+                "prerelease": true
+            },
+            {
+                "name": "alpha",
+                "prerelease": true
+            }
+        ]
     },
     "devDependencies": {
         "@semantic-release/exec": "^6.0.3",
@@ -49,8 +128,5 @@
         "semantic-release": "^19.0.5",
         "ts-jest": "^28.0.3",
         "typescript": "^4.8.4"
-    },
-    "engines": {
-        "node": ">=17.1"
     }
 }
