docs: update readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@master/package",
     "license": "MIT",
-    "description": "An open-source project template",
+    "description": "A tool-ready open source package template 🛠 + 📦",
     "author": "Aoyue Design LLC.",
     "funding": "https://docs.master.co/package/donate",
     "homepage": "https://master.co",
