--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "sideEffects": false,
     "scripts": {
         "build:iife": "esbuild src/index.ts --bundle --outfile=dist/index.browser.js --format=iife",
-        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs.js --format=cjs",
+        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs.js --format=cjs --platform=node",
         "build:esm": "tsc",
         "build:css": "esbuild src/index.css --bundle --outfile=dist/index.css",
         "dev:iife": "npm run build:iife -- --watch",
