--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -6,7 +6,9 @@
         "dev": "next dev -p 3202",
         "build": "next build",
         "start": "next start -p 3202",
-        "lint": "next lint"
+        "lint": "next lint",
+        "link": "npm link ../../",
+        "unlink": "npm rm ../../"
     },
     "dependencies": {
         "next": "12.3.1",
