--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "./src/polyfills/css-escape.ts"
     ],
     "scripts": {
-        "build:iife": "esbuild src/index.ts --bundle --outfile=dist/index.browser.js --format=iife",
+        "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife",
         "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node",
         "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node",
         "build:css": "esbuild src/index.css --bundle --outfile=dist/index.css",
