--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,11 +1,22 @@
 {
-  "$schema": "https://unpkg.com/@changesets/config@2.2.0/schema.json",
-  "changelog": "@changesets/cli/changelog",
-  "commit": false,
-  "fixed": [],
-  "linked": [],
-  "access": "restricted",
-  "baseBranch": "main",
-  "updateInternalDependencies": "patch",
-  "ignore": []
+    "$schema": "https://unpkg.com/@changesets/config@2.2.0/schema.json",
+    "changelog": [
+        "@changesets/cli/changelog",
+        [
+            "@changesets/changelog-github",
+            {
+                "repo": "master-co/css"
+            }
+        ]
+    ],
+    "commit": false,
+    "fixed": [],
+    "linked": [],
+    "access": "public",
+    "baseBranch": "main",
+    "updateInternalDependencies": "patch",
+    "ignore": [
+        "examples/*",
+        "tests/*"
+    ]
 }
