--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,32 @@
 {
-    "compilerOptions": {
-        "outDir": "dist",
-        "baseUrl": "./",
-        "experimentalDecorators": true,
-        "moduleResolution": "Node",
-        "esModuleInterop": true,
-        "allowJs": true,
-        "target": "ESNext",
-        "module": "ESNext",
-        "skipLibCheck": true,
-        "declaration": true,
-        "sourceMap": true,
-        "lib": [
-            "es2021",
-            "dom"
-        ]
-    },
-    "include": [
-        "css/**/*.ts",
-        "css/**/*.d.ts"
-    ],
-    "exclude": [
-        "css/node_modules",
-        "css/**/*.test.ts"
+  "compilerOptions": {
+    "outDir": "dist",
+    "baseUrl": "./",
+    "experimentalDecorators": true,
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "allowJs": true,
+    "target": "ESNext",
+    "module": "ESNext",
+    "skipLibCheck": true,
+    "declaration": true,
+    "sourceMap": true,
+    "lib": [
+      "es2021",
+      "dom"
     ]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts"
+  ],
+  "exclude": [
+    "src/node_modules",
+    "src/**/*.test.ts"
+  ],
+  "references": [
+    {
+      "path": "packages/css"
+    }
+  ]
 }
