--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,161 +1,134 @@
 {
-    "name": "@master/css",
-    "license": "MIT",
-    "description": "A Virtual CSS language with enhanced syntax. ( ~13KB )",
-    "author": "Aoyue Design LLC.",
-    "funding": "https://docs.master.co/css/donate",
-    "homepage": "https://css.master.co",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/master-co/css.git"
+  "name": "@master/css",
+  "license": "MIT",
+  "description": "A Virtual CSS language with enhanced syntax. ( ~13KB )",
+  "author": "Aoyue Design LLC.",
+  "funding": "https://docs.master.co/css/donate",
+  "homepage": "https://css.master.co",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/master-co/css.git"
+  },
+  "keywords": [
+    "style",
+    "styles",
+    "html",
+    "variants",
+    "virtual",
+    "virtual-css",
+    "utility",
+    "css",
+    "ui",
+    "lightweight",
+    "class",
+    "webpack",
+    "plugin",
+    "integration",
+    "vite",
+    "parcel",
+    "build-tools",
+    "mastercss"
+  ],
+  "sideEffects": [
+    "./src/polyfills/css-escape.ts"
+  ],
+  "main": "./dist/index.cjs",
+  "jsnext:main": "./dist/index.mjs",
+  "browser": "./dist/index.browser.js",
+  "esnext": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.(t|j)sx?$": "@swc/jest"
     },
-    "keywords": [
-        "style",
-        "styles",
-        "html",
-        "variants",
-        "virtual",
-        "virtual-css",
-        "utility",
-        "css",
-        "ui",
-        "lightweight",
-        "class",
-        "webpack",
-        "plugin",
-        "integration",
-        "vite",
-        "parcel",
-        "build-tools",
-        "mastercss"
-    ],
-    "sideEffects": [
-        "./src/polyfills/css-escape.ts"
-    ],
-    "scripts": {
-        "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife",
-        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node",
-        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node",
-        "build:css": "esbuild src/index.css --bundle --outfile=dist/index.css",
-        "dev:iife": "npm run build:iife -- --watch",
-        "dev:cjs": "npm run build:cjs -- --watch",
-        "dev:esm": "npm run build:esm -- --watch",
-        "prod": "rm -rf dist && npm run build:cjs -- --minify --sourcemap && npm run build:iife -- --minify --sourcemap && npm run build:esm -- --minify --sourcemap && tsc --emitDeclarationOnly",
-        "test": "jest",
-        "lint": "eslint ./src"
-    },
-    "main": "./dist/index.cjs",
-    "jsnext:main": "./dist/index.mjs",
-    "browser": "./dist/index.browser.js",
-    "esnext": "./dist/index.mjs",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
-    "exports": {
-        ".": {
-            "require": "./dist/index.cjs",
-            "import": "./dist/index.mjs",
-            "types": "./dist/index.d.ts"
-        }
-    },
-    "jest": {
-        "testEnvironment": "node",
-        "transform": {
-            "^.+\\.(t|j)sx?$": "@swc/jest"
-        },
-        "testMatch": [
-            "<rootDir>/tests/*.ts",
-            "<rootDir>/src/**/*.test.ts"
-        ]
-    },
-    "private": false,
-    "publishConfig": {
-        "access": "public"
-    },
-    "engines": {
-        "node": ">=14"
-    },
-    "release": {
-        "plugins": [
-            [
-                "@semantic-release/commit-analyzer",
-                {
-                    "preset": "angular",
-                    "releaseRules": [
-                        {
-                            "type": "docs",
-                            "scope": "README",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "refactor",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "style",
-                            "release": "patch"
-                        }
-                    ],
-                    "parserOpts": {
-                        "noteKeywords": [
-                            "BREAKING CHANGE",
-                            "BREAKING CHANGES"
-                        ]
-                    }
-                }
-            ],
-            "@semantic-release/release-notes-generator",
-            [
-                "@semantic-release/exec",
-                {
-                    "prepareCmd": "npm run prod"
-                }
-            ],
-            [
-                "@semantic-release/github",
-                {
-                    "assets": [
-                        {
-                            "path": "dist/index.browser.js",
-                            "label": "master-css.min.js"
-                        }
-                    ]
-                }
-            ],
-            [
-                "@semantic-release/npm"
-            ]
-        ],
-        "branches": [
-            "+([0-9])?(.{+([0-9]),x}).x",
-            "main",
-            "next",
-            "next-major",
+    "testMatch": [
+      "<rootDir>/tests/*.ts",
+      "<rootDir>/src/**/*.test.ts"
+    ]
+  },
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
+  "engines": {
+    "node": ">=14"
+  },
+  "release": {
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "angular",
+          "releaseRules": [
             {
-                "name": "beta",
-                "prerelease": true
+              "type": "docs",
+              "scope": "README",
+              "release": "patch"
             },
             {
-                "name": "alpha",
-                "prerelease": true
+              "type": "refactor",
+              "release": "patch"
+            },
+            {
+              "type": "style",
+              "release": "patch"
             }
-        ]
-    },
-    "files": [
-        "dist"
+          ],
+          "parserOpts": {
+            "noteKeywords": [
+              "BREAKING CHANGE",
+              "BREAKING CHANGES"
+            ]
+          }
+        }
+      ],
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/exec",
+        {
+          "prepareCmd": "moon run prod"
+        }
+      ],
+      [
+        "@semantic-release/github",
+        {
+          "assets": [
+            {
+              "path": "dist/index.browser.js",
+              "label": "master-css.min.js"
+            }
+          ]
+        }
+      ],
+      [
+        "@semantic-release/npm"
+      ]
     ],
-    "devDependencies": {
-        "@semantic-release/exec": "^6.0.3",
-        "@swc/core": "^1.3.9",
-        "@swc/jest": "^0.2.23",
-        "@types/jest": "^29.2.0",
-        "@types/node": "^18.11.0",
-        "@typescript-eslint/eslint-plugin": "^5.40.1",
-        "@typescript-eslint/parser": "^5.40.1",
-        "dedent": "^0.7.0",
-        "esbuild": "^0.15.10",
-        "eslint": "^8.25.0",
-        "jest": "^29.2.2",
-        "semantic-release": "^19.0.5",
-        "typescript": "^4.8.4"
-    }
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "main",
+      "next",
+      "next-major",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
+    ]
+  },
+  "files": [
+    "dist"
+  ]
 }
