--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -1,7 +1,14 @@
 {
-  "extends": "../../tsconfig.json",
-  "include": [
-    "src/**/*"
-  ],
-  "references": []
+    "extend": "../../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "dist",
+        "baseUrl": "./"
+    },
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.d.ts"
+    ],
+    "exclude": [
+        "src/**/*.test.ts"
+    ]
 }
