--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extend": "../../tsconfig.json",
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "outDir": "dist",
         "baseUrl": "./"
