--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -10,13 +10,7 @@
         ]
     ],
     "commit": false,
-    "fixed": [],
     "linked": [],
     "access": "public",
-    "baseBranch": "main",
-    "updateInternalDependencies": "patch",
-    "ignore": [
-        "examples/*",
-        "tests/*"
-    ]
+    "baseBranch": "main"
 }
