--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
         "./src/polyfills/css-escape.ts"
     ],
     "scripts": {
-        "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife",
-        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node",
-        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node",
+        "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife --target=es2019",
+        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --target=es2019",
+        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --target=es2019",
         "build:css": "esbuild src/index.css --bundle --outfile=dist/index.css",
         "dev:iife": "npm run build:iife -- --watch",
         "dev:cjs": "npm run build:cjs -- --watch",
