--- a/package.json
+++ b/package.json
@@ -57,12 +57,6 @@
             "types": "./dist/index.d.ts"
         }
     },
-    "jest": {
-        "testEnvironment": "node",
-        "transform": {
-            "^.+\\.(t|j)sx?$": "@swc/jest"
-        }
-    },
     "private": false,
     "publishConfig": {
         "access": "public"
@@ -143,15 +137,20 @@
         "@semantic-release/exec": "^6.0.3",
         "@swc/core": "^1.3.9",
         "@swc/jest": "^0.2.23",
-        "@types/jest": "^29.2.0",
+        "@types/jest": "^29.2.2",
         "@types/node": "^18.11.0",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "@typescript-eslint/parser": "^5.40.1",
+        "dedent": "^0.7.0",
         "esbuild": "^0.15.10",
         "eslint": "^8.25.0",
-        "jest": "^29.2.2",
+        "jest": "^29.3.1",
+        "jest-environment-jsdom": "^29.3.1",
+        "jest-puppeteer": "^6.1.1",
         "semantic-release": "^19.0.5",
-        "typescript": "^4.8.4",
-        "dedent": "^0.7.0"
+        "typescript": "^4.8.4"
+    },
+    "dependencies": {
+        "puppeteer": "^19.2.2"
     }
 }
