--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
         "jest": "^29.3.1",
         "jest-environment-jsdom": "^29.3.1",
         "jest-puppeteer": "^6.1.1",
+        "jquery": "^3.6.1",
         "semantic-release": "^19.0.5",
         "typescript": "^4.8.4"
     },
