ci: browser env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ workflows:
 jobs:
     release:
         docker:
-            - image: 'cimg/node:17.9.1'
+            - image: cimg/node:17.9.1-browsers
         steps:
             - checkout
             - restore_cache:
