--- a/package.json
+++ b/package.json
@@ -148,10 +148,8 @@
         "jest-environment-jsdom": "^29.3.1",
         "jest-puppeteer": "^6.1.1",
         "jquery": "^3.6.1",
+        "puppeteer": "^19.2.2",
         "semantic-release": "^19.0.5",
         "typescript": "^4.8.4"
-    },
-    "dependencies": {
-        "puppeteer": "^19.2.2"
     }
 }
