chore: package.json

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -6,9 +6,11 @@
     "author": "Aoyue Design LLC.",
     "funding": "https://docs.master.co/css/donate",
     "homepage": "https://css.master.co",
+    "bugs": "https://github.com/master-co/css/issues",
     "repository": {
         "type": "git",
-        "url": "https://github.com/master-co/css-compiler.git"
+        "url": "https://github.com/master-co/css.git",
+        "directory": "packages/compiler"
     },
     "keywords": [
         "webpack",
@@ -32,9 +34,7 @@
         "lint": "eslint ./src"
     },
     "main": "./dist/index.cjs",
-    "jsnext:main": "./dist/index.mjs",
     "browser": "./dist/index.browser.js",
-    "esnext": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "exports": {
@@ -44,80 +44,8 @@
             "types": "./dist/index.d.ts"
         }
     },
-    "jest": {
-        "testEnvironment": "node",
-        "transform": {
-            "^.+\\.(t|j)sx?$": "@swc/jest"
-        },
-        "testMatch": [
-            "<rootDir>/tests/*.ts",
-            "<rootDir>/src/**/*.test.ts"
-        ]
-    },
-    "private": false,
-    "publishConfig": {
-        "access": "public"
-    },
     "engines": {
         "node": ">=14"
-    },
-    "release": {
-        "plugins": [
-            [
-                "@semantic-release/commit-analyzer",
-                {
-                    "preset": "angular",
-                    "releaseRules": [
-                        {
-                            "type": "docs",
-                            "scope": "README",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "refactor",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "style",
-                            "release": "patch"
-                        }
-                    ],
-                    "parserOpts": {
-                        "noteKeywords": [
-                            "BREAKING CHANGE",
-                            "BREAKING CHANGES"
-                        ]
-                    }
-                }
-            ],
-            "@semantic-release/release-notes-generator",
-            [
-                "@semantic-release/exec",
-                {
-                    "prepareCmd": "npm run prod"
-                }
-            ],
-            [
-                "@semantic-release/github"
-            ],
-            [
-                "@semantic-release/npm"
-            ]
-        ],
-        "branches": [
-            "+([0-9])?(.{+([0-9]),x}).x",
-            "main",
-            "next",
-            "next-major",
-            {
-                "name": "beta",
-                "prerelease": true
-            },
-            {
-                "name": "alpha",
-                "prerelease": true
-            }
-        ]
     },
     "files": [
         "dist"
