--- a/package.json
+++ b/package.json
@@ -1,93 +1,27 @@
 {
     "name": "root",
     "version": "0.0.0",
-    "private": true,
-    "packageManager": "npm@8.19.2",
     "repository": {
         "type": "git",
         "url": "https://github.com/master-co/css.git"
     },
     "scripts": {
-        "lint": "eslint ./src",
-        "moon": "moon",
-        "test": "jest"
+        "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife --target=es2019",
+        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --target=es2019",
+        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --target=es2019",
+        "build:css": "esbuild src/index.css --bundle --outfile=dist/index.css",
+        "dev:iife": "npm run build:iife -- --watch",
+        "dev:cjs": "npm run build:cjs -- --watch",
+        "dev:esm": "npm run build:esm -- --watch",
+        "prod": "rm -rf dist && npm run build:cjs -- --minify --sourcemap && npm run build:iife -- --minify --sourcemap && npm run build:esm -- --minify --sourcemap && tsc --emitDeclarationOnly",
+        "test": "jest",
+        "lint": "eslint ./src"
     },
     "workspaces": [
         "packages/*"
     ],
-    "engines": {
-        "node": "16.18.0"
-    },
-    "release": {
-        "plugins": [
-            [
-                "@semantic-release/commit-analyzer",
-                {
-                    "preset": "angular",
-                    "releaseRules": [
-                        {
-                            "type": "docs",
-                            "scope": "README",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "refactor",
-                            "release": "patch"
-                        },
-                        {
-                            "type": "style",
-                            "release": "patch"
-                        }
-                    ],
-                    "parserOpts": {
-                        "noteKeywords": [
-                            "BREAKING CHANGE",
-                            "BREAKING CHANGES"
-                        ]
-                    }
-                }
-            ],
-            "@semantic-release/release-notes-generator",
-            [
-                "@semantic-release/exec",
-                {
-                    "prepareCmd": "npm run prod"
-                }
-            ],
-            [
-                "@semantic-release/github",
-                {
-                    "assets": [
-                        {
-                            "path": "dist/index.browser.js",
-                            "label": "master-css.min.js"
-                        }
-                    ]
-                }
-            ],
-            [
-                "@semantic-release/npm"
-            ]
-        ],
-        "branches": [
-            "+([0-9])?(.{+([0-9]),x}).x",
-            "main",
-            "next",
-            "next-major",
-            {
-                "name": "beta",
-                "prerelease": true
-            },
-            {
-                "name": "alpha",
-                "prerelease": true
-            }
-        ]
-    },
     "devDependencies": {
         "@changesets/cli": "^2.25.0",
-        "@moonrepo/cli": "^0.17.0",
-        "@semantic-release/exec": "^6.0.3",
         "@swc/core": "^1.3.9",
         "@swc/jest": "^0.2.23",
         "@types/jest": "^29.2.0",
@@ -98,7 +32,6 @@
         "esbuild": "^0.15.10",
         "eslint": "^8.25.0",
         "jest": "^29.2.2",
-        "semantic-release": "^19.0.5",
         "typescript": "^4.8.4"
     }
 }
