--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "esbuild": "^0.15.10",
         "eslint": "^8.25.0",
         "jest": "^29.2.2",
+        "lerna": "^6.0.3",
         "typescript": "^4.8.4"
     }
 }
