--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -1,6 +1,17 @@
 {
     "name": "@master/css",
     "version": "2.0.0-beta.40",
+    "scripts": {
+        "build:iife": "esbuild src/index.browser.ts --bundle --outfile=dist/index.browser.js --format=iife --target=es2019",
+        "build:cjs": "esbuild src/index.ts --bundle --outfile=dist/index.cjs --format=cjs --platform=node --target=es2019",
+        "build:esm": "esbuild src/index.ts --bundle --outfile=dist/index.mjs --format=esm --platform=node --target=es2019",
+        "build": "rm -rf dist && npm run build:cjs -- --minify --sourcemap && npm run build:iife -- --minify --sourcemap && npm run build:esm -- --minify --sourcemap && tsc --emitDeclarationOnly",
+        "dev:iife": "npm run build:iife -- --watch",
+        "dev:cjs": "npm run build:cjs -- --watch",
+        "dev:esm": "npm run build:esm -- --watch",
+        "test": "jest",
+        "lint": "eslint ./src"
+    },
     "license": "MIT",
     "description": "A Virtual CSS language with enhanced syntax. ( ~13KB )",
     "author": "Aoyue Design LLC.",
@@ -47,9 +58,6 @@
             "import": "./dist/index.mjs",
             "types": "./dist/index.d.ts"
         }
-    },
-    "engines": {
-        "node": ">=14"
     },
     "files": [
         "dist"
