--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -49,9 +49,10 @@
         "dist"
     ],
     "peerDependencies": {
-        "@master/css": "*"
+        "vite": "*"
     },
     "dependencies": {
+        "@master/css": "*",
         "@master/css.compiler": "*"
     }
 }
