--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -48,6 +48,9 @@
     "files": [
         "dist"
     ],
+    "peerDependencies": {
+        "@master/css": "*"
+    },
     "dependencies": {
         "@master/css": "*",
         "chalk": "^4.0.0"
