--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "packages/*"
     ],
     "devDependencies": {
-        "@changesets/cli": "^2.25.0",
         "@swc/core": "^1.3.9",
         "@swc/jest": "^0.2.23",
         "@types/jest": "^29.2.0",
@@ -23,7 +22,10 @@
         "esbuild": "^0.15.10",
         "eslint": "^8.25.0",
         "jest": "^29.2.2",
+        "jest-environment-jsdom": "^29.3.1",
+        "jest-puppeteer": "^6.1.1",
         "lerna": "^6.0.3",
+        "puppeteer": "^19.2.2",
         "typescript": "^4.8.4"
     }
 }
