--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
             "tempTag": true
         },
         "version": {
-            "message": "chore(release): publish %s",
+            "message": "chore(release): publish",
             "conventionalCommits": true
         }
     }
