--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "workspaces": [
         "packages/*"
     ],
+    "husky": {
+        "hooks": {
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+        }
+    },
     "devDependencies": {
+        "@commitlint/cli": "^17.2.0",
+        "@commitlint/config-conventional": "^17.2.0",
         "@swc/core": "^1.3.9",
         "@swc/jest": "^0.2.23",
         "@types/jest": "^29.2.0",
@@ -21,6 +28,7 @@
         "dedent": "^0.7.0",
         "esbuild": "^0.15.10",
         "eslint": "^8.25.0",
+        "husky": "^8.0.2",
         "jest": "^29.2.2",
         "jest-environment-jsdom": "^29.3.1",
         "jest-puppeteer": "^6.1.1",
